--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 appnope==0.1.0
 astroid==1.5.3
-biopython==1.70
 bleach==2.1.1
+CacheControl==0.12.4
 cachetools==2.1.0
 certifi==2017.11.5
 chardet==3.0.4
@@ -11,20 +11,24 @@ cycler==0.10.0
 decorator==4.1.2
 defusedxml==0.5.0
 dj-database-url==0.4.2
-Django==1.8.19
-django-cors-headers==2.1.0
-django-filter==1.1.0
-djangorestframework==3.4.6
-djangorestframework-expiring-authtoken==0.1.4
 docopt==0.6.2
 entrypoints==0.2.3
 ez-setup==0.9
+firebase-admin==2.10.0
 Flask==1.0.2
 Flask-Cors==3.0.4
+gcloud==0.17.0
+google-api-core==1.1.2
 google-api-python-client==1.6.7
 google-auth==1.4.1
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.2.0
+google-cloud-core==0.28.1
+google-cloud-firestore==0.29.0
+google-cloud-storage==1.10.0
+google-resumable-media==0.3.1
+googleapis-common-protos==1.5.3
+grpcio==1.12.0
 gtfs-realtime-bindings==0.0.5
 gunicorn==19.8.1
 html5lib==1.0b10
@@ -41,27 +45,21 @@ jedi==0.11.0
 Jinja2==2.10
 jsonpickle==0.9.6
 jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.1.0
-jupyter-console==5.2.0
-jupyter-core==4.3.0
+jws==0.1.3
 lazy-object-proxy==1.3.1
 lxml==4.1.1
 Markdown==2.6.9
 MarkupSafe==1.0
-matplotlib==2.1.0
 mccabe==0.6.1
 mistune==0.7.4
 moviepy==0.2.3.4
+msgpack-python==0.5.6
 mysql-connector-python==8.0.11
 nbconvert==5.3.1
 nbformat==4.4.0
-nltk==3.2.5
 notebook==5.2.0
-numpy==1.13.3
-oauth2client==4.1.2
+oauth2client==3.0.0
 oauthlib==2.0.7
-pandas==0.21.0
 pandocfilters==1.4.2
 parso==0.1.0
 pdfminer.six==20170720
@@ -75,26 +73,24 @@ psycopg2==2.7.3.2
 ptyprocess==0.5.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
-pycryptodome==3.6.1
+pycryptodome==3.4.3
 Pygments==2.2.0
 PyJWT==1.6.1
 pylint==1.7.4
 PyMySQL==0.8.1
 pyparsing==2.2.0
 python-dateutil==2.6.1
+python-jwt==2.0.1
 python3-openid==3.1.0
 pytz==2017.3
 pyzmq==16.0.2
 qtconsole==4.3.1
 requests==2.18.4
 requests-oauthlib==0.8.0
+requests-toolbelt==0.7.0
 rsa==3.4.2
-scikit-learn==0.19.1
-scipy==1.0.0
-seaborn==0.8.1
 simplegeneric==0.8.1
 six==1.11.0
-sklearn==0.0
 social-auth-app-django==2.1.0
 social-auth-core==1.7.0
 terminado==0.6
